CSV Import Code.

--- a/web/ui/data.html
+++ b/web/ui/data.html
@@ -11,7 +11,9 @@
 <div id="lt-base">
   <div id="header">
     <h1>My Data</h2>
-    <a href="queries">Manage Queries</a>
+    <a href="data">Manage Data</a>  
+    <a href="import">Import Data</a>  
+    <a href="queries">Manage Queries</a>  
     <a href="%(logout_url)s"/>Logout</a>
   </div>
   
