--- a/web/ui/queries.html
+++ b/web/ui/queries.html
@@ -12,6 +12,8 @@
   <div id="header">
     <h1>Manage Queries</h2>
     <a href="data">Manage Data</a>  
+    <a href="import">Import Data</a>  
+    <a href="queries">Manage Queries</a>  
     <a href="%(logout_url)s"/>Logout</a>
   </div>
 
