--- a/web/ui/queries.html
+++ b/web/ui/queries.html
@@ -13,6 +13,7 @@
     <h1>Manage Queries</h2>
     <a href="data">Manage Data</a>  
     <a href="queries">Manage Queries</a>  
+    <a href="account">Account</a>
     <a href="%(logout_url)s"/>Logout</a>
   </div>
 
