--- a/web/ui/account.html
+++ b/web/ui/account.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="css/reset.css"/>
-  <link rel="stylesheet" type="text/css" href="css/queries.css"/>
+  <link rel="stylesheet" type="text/css" href="css/lt-common.css"/>
   
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
   <script src="js/account.js"></script>
