--- a/web/ui/analyze.html
+++ b/web/ui/analyze.html
@@ -1,8 +1,7 @@
-
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="css/reset.css"/>
-  <link rel="stylesheet" type="text/css" href="css/analytics.css"/>
+  <link rel="stylesheet" type="text/css" href="css/lt-common.css"/>
   
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
   <script src="js/data.js"></script>
