--- a/web/ui/home.html
+++ b/web/ui/home.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="css/reset.css"/>
+  <link rel="stylesheet" type="text/css" href="css/lt-common.css"/>
   <link rel="stylesheet" type="text/css" href="css/home.css"/>
   
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
