--- a/web/ui/import_data.html
+++ b/web/ui/import_data.html
@@ -1,11 +1,10 @@
-
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="css/reset.css"/>
+  <link rel="stylesheet" type="text/css" href="css/lt-common.css"/>
   <link rel="stylesheet" type="text/css" href="css/import.css"/>
   
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
-  <!--<script src="js/queries.js"></script>-->
 </head>
 <body>
 
