--- a/web/ui/queries.html
+++ b/web/ui/queries.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="css/reset.css"/>
+  <link rel="stylesheet" type="text/css" href="css/lt-common.css"/>
   <link rel="stylesheet" type="text/css" href="css/queries.css"/>
   
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
