More consistent naming for files, and moving all the .html's into their own folder.

--- a/web/ui/html/import_data.html
+++ b/web/ui/html/import_data.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="css/reset.css"/>
   <link rel="stylesheet" type="text/css" href="css/lt-common.css"/>
-  <link rel="stylesheet" type="text/css" href="css/import.css"/>
+  <link rel="stylesheet" type="text/css" href="css/import_data.css"/>
   
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
 </head>
