--- a/web/ui/html/manage_queries.html
+++ b/web/ui/html/manage_queries.html
@@ -2,10 +2,10 @@
 <head>
   <link rel="stylesheet" type="text/css" href="css/reset.css"/>
   <link rel="stylesheet" type="text/css" href="css/lt-common.css"/>
-  <link rel="stylesheet" type="text/css" href="css/queries.css"/>
+  <link rel="stylesheet" type="text/css" href="css/manage_queries.css"/>
   
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
-  <script src="js/queries.js"></script>
+  <script src="js/manage_queries.js"></script>
 </head>
 <body>
 
