Analyze and Import pages were missing the 'account' link.

--- a/web/ui/html/analyze.html
+++ b/web/ui/html/analyze.html
@@ -13,6 +13,7 @@
     <h1>Analytics</h2>
     <a href="data">Manage Data</a>  
     <a href="queries">Manage Queries</a>  
+    <a href="account">Account</a>
     <a href="%(logout_url)s"/>Logout</a>
   </div>
 
