'Integer' -> 'Number', UI edition.

--- a/web/ui/html/manage_queries.html
+++ b/web/ui/html/manage_queries.html
@@ -44,7 +44,7 @@
         </td>
         <td class='format-cell'>
           <select id='new-query-format-input'>
-            <option>Integer</option>
+            <option>Number</option>
             <option>Text</option>
             <option>Time</option>
           </select>
