New metrics page. Now it is the "Dashboard".
Huge diff. This includes entirely new html for the dashboard, as well as
necessary js, css, and API functionality changes for the above.

--- a/web/ui/html/home.html
+++ b/web/ui/html/home.html
@@ -13,7 +13,7 @@
 <div id="lt-base">
   <div id='lt-splash'>
     <p id='lt-tingler'>Lifetracker helps you examine yourself through the lens of data. Track any metric about your life: sleep, mood, footwear, anything. Armed thus, you will find ways to improve yourself you never would have imagined.</p>
-    <p id='lt-sig'><a href='queries'><img id='lt-badge' src='images/lifetracker.png'/></a>Optimize Yourself.</p>
+    <p id='lt-sig'><a href='dashboard'><img id='lt-badge' src='images/lifetracker.png'/></a>Optimize Yourself.</p>
   </div>
 </div>
 
