--- a/web/ui/html/account.html
+++ b/web/ui/html/account.html
@@ -12,7 +12,7 @@
   <div id="header">
     <h1>My Account</h1>
     <a href="data">Manage Data</a>  
-    <a href="queries">Manage Queries</a>  
+    <a href="dashboard">Dashboard</a>
     <a href="account">Account</a>
     <a href="%(logout_url)s"/>Logout</a>
   </div>
