--- a/web/ui/html/manage_data.html
+++ b/web/ui/html/manage_data.html
@@ -13,7 +13,7 @@
   <div id="header">
     <h1>My Data</h1>
     <a href="data">Manage Data</a>  
-    <a href="queries">Manage Queries</a>  
+    <a href="dashboard">Dashboard</a>
     <a href="account">Account</a>
     <a href="%(logout_url)s"/>Logout</a>
   </div>
