--- a/web/ui/html/dashboard.html
+++ b/web/ui/html/dashboard.html
@@ -5,6 +5,14 @@
   <link rel="stylesheet" type="text/css" href="css/dashboard.css"/>
   
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
+
+ <!-- Google Chart Stuff -->
+  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+  <script type="text/javascript">
+    // Load the Visualization API and the piechart package.
+    google.load('visualization', '1.0', {'packages':['corechart']});
+  </script>
+
   <script src="js/dashboard.js"></script>
 </head>
 <body>
