--- a/web/ui/html/account.html
+++ b/web/ui/html/account.html
@@ -2,8 +2,10 @@
 <head>
   <link rel="stylesheet" type="text/css" href="css/reset.css"/>
   <link rel="stylesheet" type="text/css" href="css/lt-common.css"/>
+  <link rel="stylesheet" type="text/css" href="css/account.css"/>
   
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
+  <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js' type='text/javascript'></script>
   <script src="js/account.js"></script>
 </head>
 <body>
@@ -28,6 +30,9 @@
     </p>
     <input id='user_email' type='hidden' value='%(user_email)s'/>
     <p><a id='account-update-button' href='#'>Update</a></p>
+  </div>
+  <div id='first-time-dialog'>
+    We'll send you reminders to update your metrics to your email or phone, but we need a number or address first!
   </div>
 </div>
 </body>
