--- a/web/ui/html/home.html
+++ b/web/ui/html/home.html
@@ -4,16 +4,52 @@
   <link rel="stylesheet" type="text/css" href="css/reset.css"/>
   <link rel="stylesheet" type="text/css" href="css/lt-common.css"/>
   <link rel="stylesheet" type="text/css" href="css/home.css"/>
-  
+  <link rel="stylesheet" type="text/css" href="css/dashboard.css"/>
+  <link rel="stylesheet" type="text/css" href="css/popup.css"/>
+  <link rel="stylesheet" type="text/css" href="css/new_metric_autocomplete.css"/>
+
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
-  <script src="js/queries.js"></script>
+  <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js' type='text/javascript'></script>
+  
+  <script type="text/javascript">
+    template_metrics = %(template_metrics)s;
+  </script>
+
+  <script src="js/home.js" type="text/javascript"></script>
+
 </head>
 <body>
 
 <div id="lt-base">
+
+  <div id='dashboard'>
+    <div id="header">
+      <h1>Dashboard</h1>
+      <a href="data">Manage Data</a>  
+      <a href="dashboard">Dashboard</a>
+      <a href="account">Account</a>
+      <a href=""/>Logout</a>
+    </div>
+    <div id="query-list">
+      <!-- metrics go here -->
+    </div>
+  </div>
+
+  <div id='lt-header'>
+    <div id='lt-user-actions'>
+      <a id='login' href='%(login_url)s'>Login</a>
+    </div>
+  </div>
   <div id='lt-splash'>
-    <p id='lt-tingler'>Lifetracker helps you examine yourself through the lens of data. Track any metric about your life: sleep, mood, footwear, anything. Armed thus, you will find ways to improve yourself you never would have imagined.</p>
-    <p id='lt-sig'><a href='dashboard'><img id='lt-badge' src='images/lifetracker.png'/></a>Optimize Yourself.</p>
+    <h2 id='lt-prompt-text'>What would you like to track</h2>
+    <input id='lt-prompt' type='text'/>
+  </div>
+  <div id='lt-title-container'>
+    <h1 id='lt-title'>SUPERHUMAN</h1>
+  </div>
+
+  <div id='dialog' class='popup'>
+    Its time to get your account set up. You will be redirected to the login screen and then you'll be set to start tracking! 
   </div>
 </div>
 
