--- a/web/ui/html/home.html
+++ b/web/ui/html/home.html
@@ -44,6 +44,7 @@
     <h2 id='lt-prompt-text'>What would you like to track</h2>
     <input id='lt-prompt' type='text'/>
     <p id='example'>e.g. Mood, Sleep Hours, Breakfast</p>
+    <input id='lt-prompt-shadow' type='text'/>
   </div>
   <div id='lt-title-container'>
     <h1 id='lt-title'>SUPERHUMAN</h1>
