Added an e.g. line on the homepage after some quick user-testing.

--- a/web/ui/html/home.html
+++ b/web/ui/html/home.html
@@ -43,6 +43,7 @@
   <div id='lt-splash'>
     <h2 id='lt-prompt-text'>What would you like to track</h2>
     <input id='lt-prompt' type='text'/>
+    <p id='example'>e.g. Mood, Sleep Hours, Breakfast</p>
   </div>
   <div id='lt-title-container'>
     <h1 id='lt-title'>SUPERHUMAN</h1>
