More business analytics logging.

--- a/web/intern/html/engagement.html
+++ b/web/intern/html/engagement.html
@@ -16,6 +16,10 @@
 
   <table class='lt-analytics-table'>
     <tr>
+      <td>New Logins</td>
+      <td>%(queries_sent)s</td>
+    </tr>
+    <tr>
       <td>New Datapoints</td>
       <td> %(new_datapoints)s</td>
     </tr>
@@ -42,8 +46,16 @@
       <td>%(sms_sent)s</td>
     </tr>
     <tr>
+      <td>SMS Received</td>
+      <td>%(sms_received)s</td>
+    </tr>
+    <tr>
       <td>Emails Sent</td>
       <td>%(emails_sent)s</td>
+    </tr>
+    <tr>
+      <td>Emails Received</td>
+      <td>%(emails_received)s</td>
     </tr>
   </table>
 </div>
