Bugfixes for business logging. This is what happens without code-review.

--- a/web/intern/html/engagement.html
+++ b/web/intern/html/engagement.html
@@ -17,7 +17,7 @@
   <table class='lt-analytics-table'>
     <tr>
       <td>New Logins</td>
-      <td>%(queries_sent)s</td>
+      <td>%(new_logins)s</td>
     </tr>
     <tr>
       <td>New Datapoints</td>
