--- a/web/ui/html/home.html
+++ b/web/ui/html/home.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" type="text/css" href="css/intro.css"/>
   <link rel="stylesheet" type="text/css" href="css/new_metric_autocomplete.css"/>
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js" type="text/javascript"></script>
-  <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js' type='text/javascript'></script>
+  <script src="js/libs/jquery.min.js" type="text/javascript"></script>
+  <script src='js/libs/jquery-ui.min.js' type='text/javascript'></script>
   
   <script type="text/javascript">
     template_metrics = %(template_metrics)s;
