Another new homepage and sign-up flow. This one attempts to merge the Introduction and the set-up portions of signup. The user is actually setting up their account at the same time as they are learning about the product. Its pretty slick.
This could still use some refactoring, but it works and its been sitting here for a while, so its getting pushed damnit.

--- a/web/ui/html/dashboard.html
+++ b/web/ui/html/dashboard.html
@@ -21,3 +21,30 @@ deeper the insights you'll be able to find about yourself. Why not choose a few 
 <div id="setup-complete-dialog" class='popup'>
   Welcome, Superhuman! This is your dashboard. From here you can view your data, edit your metrics, and run analytics. Happy tracking!
 </div>
+
+<div id='intro'>
+  <div id='intro-page1' class='intro-page active'>
+    <h2>This is the dashboard, your self-tracking home base.</h2>
+    <h3>[Click Here]</h3>
+  </div>
+
+  <div id='intro-page2' class='intro-page'>
+    <h2>Your metrics are listed here.</h2>
+  </div>
+
+  <div id='intro-page3' class='intro-page'>
+     <h2>You can edit your metrics with the cog icon.</h2>
+  </div>
+
+  <div id='intro-page4' class='intro-page'>
+    <h2>Once your dataset grows, you can analyze each of your metrics with the lightbulb</h2>
+  </div>
+
+  <div id='intro-page5' class='intro-page'>
+    <h2>You can always add new metrics here. The more you track, the more powerful will be your insights!</h2>
+  </div>
+
+  <div id='intro-page6' class='intro-page'>
+    <h2>Happy Tracking!</h2>
+  </div>
+</div>
