--- a/web/ui/html/metric.html
+++ b/web/ui/html/metric.html
@@ -21,13 +21,13 @@
   </div>
   <div class='metric-options'>
     <a id='analyze-%(query_id)s' class='analyze-button' href='#'>
-      <img src='images/lightbulb_icon.jpg'/>
+      <img src='images/lightbulb_icon.png'/>
     </a>
     <a id='edit-%(query_id)s' class='query-edit-button' href='#'>
-      <img src='images/cog_icon.jpg'/>
+      <img src='images/cog_icon.png'/>
     </a>
     <a id='submit-%(query_id)s' class='query-edit-submit-button' href='#'>
-      <img src='images/checkmark_icon.jpg'/>
+      <img src='images/checkmark_icon.png'/>
     </a>
   </div>
   <div id='edit-format-container-%(query_id)s' class='edit-field edit-format-container'>
