Better performance tracking. Added a decorator to the most important handlers that tracks the walltime for each request in ActionLog. Then added lines to our business dashboard to track average and worst daily walltimes.

--- a/web/intern/html/engagement.html
+++ b/web/intern/html/engagement.html
@@ -58,6 +58,39 @@
       <td>%(emails_received)s</td>
     </tr>
   </table>
+  <h2>Wall Time (ms)</h2>
+  <table class='lt-analytics-table'>
+    <thead>
+      <td></td>
+      <td>Average</td>
+      <td>Worst</td>
+    </thead>
+    <tr>
+      <td>Dashboard</td>
+      <td>%(dashboard_walltime)s</td>
+      <td>%(dashboard_worst_walltime)s</td>
+    </tr>
+    <tr>
+      <td>Data</td>
+      <td>%(data_walltime)s</td>
+      <td>%(data_worst_walltime)s</td>
+    </tr>
+    <tr>
+      <td>Home</td>
+      <td>%(home_walltime)s</td>
+      <td>%(home_worst_walltime)s</td>
+    </tr>
+    <tr>
+      <td>Analyze</td>
+      <td>%(analyze_walltime)s</td>
+      <td>%(analyze_worst_walltime)s</td>
+    </tr>
+    <tr>
+      <td>AnalyzeJSON</td>
+      <td>%(analyze_json_walltime)s</td>
+      <td>%(analyze_json_worst_walltime)s</td>
+    </tr>
+  </table>
 </div>
 
 </body>
