Creating a new metric on the dashboard is now an async call. People were getting confused.

--- a/web/ui/html/dashboard.html
+++ b/web/ui/html/dashboard.html
@@ -13,6 +13,7 @@ deeper the insights you'll be able to find about yourself. Why not choose a few 
     </div>
     <input type='text' id='lt-new-metric-prompt'/>
     <input type='text' id='lt-prompt-shadow'/> 
+    <img id='new-metric-loading' src='images/loading.gif'/>
   </div>
 </div>
 <div id="first-time-dialog" class='popup'>
