Deleting a metric on the dashboard is now an async call.

--- a/web/ui/html/metric.html
+++ b/web/ui/html/metric.html
@@ -57,6 +57,7 @@
   <div id='delete-container-%(query_id)s' class='edit-field delete-container'>
       <a id='delete-%(query_id)s' class='query-delete-button' href='#'>Delete</a>
       <a id='confirm-delete-%(query_id)s' class='query-delete-confirm-button' href='#'>Really?</a>
+      <img id='delete-spinner' src='images/loading.gif'/>
   </div>
 
 
