Updating a metric on the dashboard is now an async call.

--- a/web/ui/html/metric.html
+++ b/web/ui/html/metric.html
@@ -29,6 +29,7 @@
     <a id='submit-%(query_id)s' class='query-edit-submit-button' href='#'>
       <img src='images/checkmark_icon.png'/>
     </a>
+    <img class='submit-spinner' src='images/loading.gif'/>
   </div>
   <div id='edit-format-container-%(query_id)s' class='edit-field edit-format-container'>
     <p>Format</p>
