Consistent copy on the homepage.

--- a/web/ui/html/home.html
+++ b/web/ui/html/home.html
@@ -35,7 +35,7 @@
     <h2>Start by choosing either a light or moderate set of metrics</h2>
     <div id='program-container'>
       <div class='section left' id='casual'>
-        <h3>Casual</h3>
+        <h3>Light</h3>
       </div>
       <div class='section left' id='moderate'>
         <h3>Moderate</h3>
